--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,19 @@ button {
     font-size: 14px;
     cursor: pointer;
 }
+.not-working {
+    margin-top: 20px;
+    font-size: 14px;
+    line-height: 1.6;
+  }
+  
+  .not-working h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  
+  .not-working a {
+    color: #333;
+    text-decoration: underline;
+  }
+  
